@@ -773,6 +773,19 @@ u3 = UNION ONSCHEMA e, f;
 SPLIT u3 INTO t if age > 75, u OTHERWISE;
 v = JOIN t BY name LEFT, c BY votername;
 store v into ':OUTPATH:';\,
+            },
+            {
+            # PIG-5375. multi-level Unions with splits
+            'num' => 15,
+            'pig' => q\a = load ':INPATH:/singlefile/studentnulltab10k' as (name, age:int, gpa);
+b= load ':INPATH:/singlefile/studentnulltab10k' as (name, age:int, gpa);
+c= load ':INPATH:/singlefile/studentnulltab10k' as (name, age:int, gpa);
+a_and_b = UNION ONSCHEMA a, b;
+SPLIT a_and_b INTO a_and_b2 IF age < 30, a_and_b3 OTHERWISE;
+a_and_b_and_c = UNION ONSCHEMA c, a_and_b;
+v = UNION ONSCHEMA a_and_b_and_c, a_and_b2, a_and_b3;
+v2 = GROUP v by *;
+store v2 into ':OUTPATH:';\,
             }
             ] # end of tests
         },
